From 38132bc (master):
=====================

In prisim/interferometry.py,

(*) In function getBaselineInfo(), add support for updated MWA
layouts using default antenna locations. Update member function
docstring accordingly

In prisim/examples/simparms/defaultparms.yaml,

(*) Add support for updated MWA layouts using default antenna
locations. Update information about latitude and longitude of MWA

From 1e4267d (closure-adv):
==========================

In prisim/examples/codes/BispectrumPhase/,

(*) Update *.ipynb codes corresponding to the bispectrum phase math
paper

From 40c4d19 (master):
=====================

In prisim/interferometry.py,

(*) Import astroutils
(*) In member function save() of class InterferometerArray, save the
githash of the AstroUtils and PRISim versions in the HDF5 output file
(*) In member function __init__() of class InterferometerArray, read
or assign the prisim_githash and astroutils_githash attributes. Update
class and member function docstring accordingly

From 04f7905 (master):
=====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Change default value of 'wait_after_run' from false to true

In prisim/interferometry.py,

(*) In member function observe() of class InterferometerArray, remove
a redundant set of statements

From 9eb2a00 (master):
=====================

In prisim/__init__.py,

(*) Update PRISim version

From fa5a832 (master):
=====================

(*) `git rm -r main` folder from the repository

From d3592b0 (closure-adv):
==========================

In prisim/examples/codes/BispectrumPhase/,

(*) Update *.ipynb codes corresponding to the bispectrum phase data
analysis demo paper

From b3cbcec (closure-adv):
==========================

In prisim/examples/codes/BispectrumPhase/,

(*) Update *.ipynb codes corresponding to the bispectrum phase math
paper

From cf6f5df (parabolic-cylinder):
=================================

(*) In member function duplicate_measurements() of class